@@ -197,8 +197,12 @@ nobase_include_HEADERS = \
 	freeipmi/spec/oem/ipmi-sensor-types-oem-fujitsu-spec.h \
 	freeipmi/spec/oem/ipmi-sensor-types-oem-hp-spec.h \
 	freeipmi/spec/oem/ipmi-sensor-types-oem-intel-node-manager-spec.h \
-	freeipmi/spec/oem/ipmi-sensor-types-oem-inventec-spec.h \
 	freeipmi/spec/oem/ipmi-sensor-types-oem-intel-spec.h \
+	freeipmi/spec/oem/ipmi-sensor-types-oem-intel-common-spec.h \
+	freeipmi/spec/oem/ipmi-sensor-types-oem-intel-s5500wb-spec.h \
+	freeipmi/spec/oem/ipmi-sensor-types-oem-intel-sr1625-spec.h \
+	freeipmi/spec/oem/ipmi-sensor-types-oem-intel-quanta-qssc-s4r-spec.h \
+	freeipmi/spec/oem/ipmi-sensor-types-oem-inventec-spec.h \
 	freeipmi/spec/oem/ipmi-sensor-types-oem-supermicro-spec.h \
 	freeipmi/spec/oem/ipmi-sensor-types-oem-wistron-spec.h \
 	freeipmi/spec/oem/ipmi-slave-address-oem-intel-spec.h \
