@@ -18,6 +18,7 @@
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-number-oem-intel-spec.h,
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-slave-address-oem-intel-spec.h,
 	libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-intel-spec.c,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-cmd-oem-intel-spec.h:
@@ -37,7 +38,11 @@
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-common-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-s5500wb-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-s2600jf-spec.h,
-	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-s2600wt-spec.h:
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-s2600wt-spec.h,
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-common-spec.h,
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-s5500wb-spec.h,
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-sr1625-spec.h,
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-quanta-qssc-s4r-spec.h:
 	New file(s).
 
 	* libfreeipmi/sel, libfreeipmi/util, ipmi-oem: Update for macro /
